<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activitys.MainActivity">

    <item
        android:id="@+id/add_group"
        android:title="@string/add_group"
        android:orderInCategory="1" />

    <item
        android:id="@+id/add_student"
        android:title="@string/add_student"
        android:orderInCategory="2"  />

    <item
        android:id="@+id/select_head"
        android:title="@string/select_head"
        android:orderInCategory="3"  />

    <item
        android:id="@+id/delete_group"
        android:title="@string/delete_group"
        android:orderInCategory="4"  />

    <item
        android:id="@+id/delete_student"
        android:title="@string/delete_student"
        android:orderInCategory="5"  />

</menu>